--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
+		"firebase": "^8.5.0",
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
 		"react-dom": "^17.0.2",
@@ -17,7 +18,8 @@
 		"react-router-bootstrap": "^0.25.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
-		"react-share": "^4.4.0"
+		"react-share": "^4.4.0",
+		"web-vitals": "^1.1.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
