--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
 		"react": "^17.0.2",
 		"react-bootstrap": "^1.5.2",
 		"react-dom": "^17.0.2",
+		"react-google-button": "^0.7.2",
 		"react-icons": "^4.2.0",
 		"react-reveal": "^1.2.2",
 		"react-router": "^5.2.0",
@@ -19,7 +20,8 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"react-share": "^4.4.0",
-		"web-vitals": "^1.1.2"
+		"web-vitals": "^1.1.2",
+		"zxcvbn": "^4.4.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
