--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 		"react-router-bootstrap": "^0.25.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"react-scroll-box": "^0.3.5",
 		"react-share": "^4.4.0",
 		"web-vitals": "^1.1.2"
 	},
