--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"express": "^4.17.1",
 		"express-async-handler": "^1.1.4",
 		"express-firebase-middleware": "^3.0.0",
+		"firebase": "^8.6.1",
 		"firebase-admin": "^9.8.0",
 		"http": "0.0.1-security",
 		"nodemon": "^2.0.7"
